[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/components/ui/hud/arrows/arrow/HUDArrow.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/components/ui/hud/arrows/HUDArrows.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HUDArrowUp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HUDArrowRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 16, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HUDArrowDown:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HUDArrowLeft:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -16, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "activate"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("HUDArrowUp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ), Vector2( 0, -28 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HUDArrowRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 16, 0 ), Vector2( 28, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HUDArrowDown:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 16 ), Vector2( 0, 28 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HUDArrowLeft:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( -16, 0 ), Vector2( -28, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "deactivate"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("HUDArrowUp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -28 ), Vector2( 0, -16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HUDArrowRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 28, 0 ), Vector2( 16, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HUDArrowDown:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 28 ), Vector2( 0, 16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HUDArrowLeft:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( -28, 0 ), Vector2( -16, 0 ) ]
}

[node name="HUDArrows" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="HUDArrowUp" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -16 )

[node name="HUDArrowRight" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 0 )
rotation = 1.5708

[node name="HUDArrowDown" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 16 )
rotation = 3.14159

[node name="HUDArrowLeft" parent="." instance=ExtResource( 1 )]
position = Vector2( -16, 0 )
rotation = -1.5708

[node name="Activate" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/activate = SubResource( 2 )
anims/deactivate = SubResource( 3 )

[node name="Interpolate" type="Tween" parent="."]
